# multiagents

./: .gitignore  app.py  pyproject.toml  run_once.sh
agents/customer_care/: customer_care_agent.py
agents/event/: event_agent.py
agents/route/: route_agent.py
agents/trends/: trends_agent.py
endpoints/customer_care/: routes.py
endpoints/event_agent/: routes.py
endpoints/mock/: routes.py
endpoints/route_agent/: routes.py
endpoints/trends_agent/: routes.py
tools/customer_care/: FAQ_Paketverlust.txt  faq_service.py  order_service.py
tools/event/: event_service.py
tools/route/: route_service.py
tools/trends/: trends_service.py
